@@ -435,8 +435,8 @@ class MutableTree(tree.Tree):
         """Update the parents of this tree after a commit.
 
         This gives the tree one parent, with revision id new_revid. The
-        inventory delta delta is applied ot the current basis tree to generate
-        the inventory for the parent new_revid, and all other parent trees are
+        inventory delta is applied ot the current basis tree to generate the
+        inventory for the parent new_revid, and all other parent trees are
         discarded.
 
         :param new_revid: The new revision id for the trees parent.
