@@ -153,6 +153,10 @@ IN DEVELOPMENT
      shorthand for deriving from BzrError and setting internal_error = True.
      (Robert Collins)
 
+   * New method ``bzrlib.mutabletree.update_to_one_parent_via_delta`` for
+     moving the state of a parent tree to a new version via a delta rather than
+     a complete replacement tree. (Robert Collins)
+
    * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing
      duplication from user input, when a user mentions both a path and an item
      contained within that path. (Robert Collins)
